# polyglot

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .ignore  .prettierignore  .prettierrc.json  CODE_OF_CONDUCT.md  Cargo.toml  Polyglot.sln  README.md  _editorconfig  _gitattributes  _gitignore  _gitlab-ci.yml  build.dib  build.ps1  build.repl.ipynb  bun.lockb  core.ps1  flake.nix  index.html  init.dib  init.ps1  init.repl.ipynb  package.json  paket.dependencies  pnpm-lock.yaml  polyglot.sln  requirements.txt  rust-toolchain.toml  tsconfig.json
.config/: dotnet-tools.json
.devcontainer/: Dockerfile  devcontainer.json
.run/: fsw Hopac.fsx.run.xml
_config/: dotnet-tools.json
_devcontainer/: devcontainer.json
_github/: FUNDING.yml
apps/chat/contract/: Cargo.toml  build.ps1  chat_contract.dib  chat_contract.dib.html  chat_contract.dib.ipynb  chat_contract.fsx  chat_contract.rs  chat_contract.spi  package.spiproj
apps/chat/contract/res/: chat.wasm
apps/chat/contract/src/: lib.rs
apps/chat/contract/tests/: Cargo.toml  build.ps1
apps/chat/contract/tests/src/: main.rs
apps/chat/tests/: Cargo.toml  build.ps1  example_tests.rs
apps/chat/ui/: Cargo.toml  bos.jsx  build.ps1  index.html  serve.ps1
apps/chat/ui/e2e/: package.json  playwright.config.ts  pnpm-lock.yaml
apps/chat/ui/e2e/tests/: test.spec.ts
apps/chat/ui/src/: app.rs  components.rs  lib.rs  main.rs  near.rs  state.rs
apps/chat/ui/src/components/: DarkModeButton.rs  Player.rs
apps/chat/ui/src/near/: backend.rs  rpc.rs
apps/dice/: Cargo.toml  Dice.dart  Dice.dib  Dice.dib.html  Dice.dib.ipynb  Dice.fs  Dice.php  Dice.repl.ipynb  Dice.rs  Dice.spi  Dice.ts  DiceChain.rs  Main.fs  build.ps1  dice.ans  dice.dart  dice.dib  dice.dib.html  dice.dib.ipynb  dice.fsproj  dice.fsx  dice.php  dice.py  dice.repl.ipynb  dice.rs  dice.spi  dice.ts  dice_chain.rs  dice_chain_fsharp.rs  dice_fsharp.dart  dice_fsharp.dib  dice_fsharp.dib.html  dice_fsharp.dib.ipynb  dice_fsharp.fs  dice_fsharp.php  dice_fsharp.rs  dice_wasm.rs  package.spiproj
apps/dice/contract/: Cargo.toml  README.md  build.ps1
apps/dice/contract/res/: dice.wasm
apps/dice/contract/src/: lib.rs
apps/dice/contract/tests/: Cargo.toml  build.ps1
apps/dice/contract/tests/src/: main.rs
apps/dice/fsharp/: Cargo.toml  build.ps1  dice_chain_fsharp.rs  dice_fsharp.dart  dice_fsharp.dib  dice_fsharp.dib.html  dice_fsharp.dib.ipynb  dice_fsharp.fs  dice_fsharp.php  dice_fsharp.py  dice_fsharp.rs  dice_fsharp.ts  dice_wasm_fsharp.rs
apps/dice/temp/: dice.fsproj
apps/dice/tests/: Cargo.toml  example_tests.rs
apps/dice/ui/: Cargo.toml  bos.jsx  build.ps1  dice_ui.fsx  dice_ui.spi  dice_ui_wasm.rs  explorer_backend_host.txt  index.html  package.json  package.spiproj  pnpm-lock.yaml  serve.ps1  tailwind.config.js  ui.fsx  ui.spi  ui_wasm.rs
apps/dice/ui/e2e/: package.json  playwright.config.ts  pnpm-lock.yaml
apps/dice/ui/e2e/tests/: test.spec.ts
apps/dice/ui/public/: manifest.json
apps/dice/ui/src/: app.rs  components.rs  dice_ui.fsx  dice_ui.spi  dice_ui_wasm.rs  js.rs  lib.rs  main.rs  model.rs  state.rs  state.spi
apps/dice/ui/src/components/: DarkModeButton.rs  Home.rs  app.spi  content.spi  dark_mode_toggle.spi  explorer_backend_host_input.spi  history.spi  home.spi  menu_tabs.spi  settings.spi  transaction.spi  transactions.spi
apps/dice/ui/src/model/: near.rs
apps/dice/ui/src/model/near/: backend.rs  backend.spi  nearblocks.rs  nearblocks.spi  rpc.rs
apps/dice/ui/src/near/: backend.rs
apps/plot/: Cargo.toml  build.ps1  lib.rs  plot.rs
apps/spiral/builder/: Cargo.toml  build.ps1  builder.dib  builder.dib.html  builder.dib.ipynb  builder.fsx  builder.rs  builder.spi  package.spiproj  spiral_builder.dib  spiral_builder.dib.html  spiral_builder.dib.ipynb  spiral_builder.fsx  spiral_builder.rs  spiral_builder.spi
apps/spiral/rust_builder/: Cargo.toml  build.ps1  package.spiproj  rust_builder.dib  rust_builder.dib.html  rust_builder.dib.ipynb  rust_builder.fsx  rust_builder.rs  rust_builder.spi
apps/spiral/temp/cli/: Cargo.toml  build.ps1  cli.fsproj  cli.fsx  cli.rs  cli.spi  main.rs  post_fsx_rs_build.spi  spi_fsx_build.spi
apps/spiral/temp/cube/: Cargo.toml  build.ps1  cube.dib  cube.dib.html  cube.dib.ipynb  cube.fsx  cube.py  cube.rs  cube.spi  cube.ts  cube_auto.py  cube_cuda.py  package.spiproj
apps/spiral/temp/extension/: Cargo.toml  build.ps1  bun.lockb  content_script.ts  devtools.ts  package.json  playwright.config.ts  pnpm-lock.yaml  service_worker.ts  tsconfig.json
apps/spiral/temp/extension/e2e/: extension.spec.ts  fixtures.ts
apps/spiral/temp/extension/playwright-report/: index.html
apps/spiral/temp/extension/public/: manifest.json  popup.html
apps/spiral/temp/extension/src/: app.rs  js.rs  lib.rs  state.rs  timer.rs
apps/spiral/temp/extension/test-results/: _last-run.json
apps/spiral/temp/proxy/: Cargo.toml  build.ps1  proxy.fsproj  proxy.fsx  proxy.rs  proxy.spi
apps/spiral/temp/test/: Cargo.toml  build.dib  build.dib.html  build.dib.ipynb  build.ps1  main.rs  test.dib  test.dib.html  test.dib.ipynb  test.fsproj  test.fsx  test.rs  test.spi
apps/spiral/wasm/: Cargo.toml  build.ps1  package.spiproj  spiral_wasm.dib  spiral_wasm.dib.html  spiral_wasm.dib.ipynb  spiral_wasm.fsx  spiral_wasm.rs  spiral_wasm.spi
apps/spiral/wasm/src/: main.rs
csharp/: Challenges.cs  Polyglot.CSharp.csproj  Program.cs
elixir/: exercism.exs  (+1 more)
lib/math/: Cargo.toml  build.ps1  math.dib  math.dib.html  math.dib.ipynb  math.fsx  math.py  math.rs  math.spi  package.spiproj
spiral/extension/: Cargo.toml  build.ps1  content_script.ts  lib.rs  package.json  playwright.config.ts  pnpm-lock.yaml  service_worker.ts
spiral/extension/e2e/: extension.spec.ts  fixtures.ts
spiral/extension/public/: manifest.json  manifest_v3.json  web_accessible_resources.js
spiral/test/: Cargo.toml  build.dib  build.dib.html  build.dib.ipynb  build.ps1  build.repl.ipynb  main.rs  test.dib  test.fsproj  test.fsx  test.out  test.repl.ipynb  test.rs  test.spi  test.test.ans  test.test.out
workspace/: Cargo.toml
(+744 files in other folders)
