cargo-features = ["profile-rustflags"]

[package]
name = "polyglot"
version = "0.0.1"
edition = "2021"

[workspace]

[workspace.package]
repository = "https://github.com/i574n/polyglot"
license-file = "../LICENSE"

[[workspace.metadata.leptos]]
name = "dice_ui"
bin-package = "dice_ui"
lib-package = "dice_ui"
output-name = "ui"

[dependencies]

[dev-dependencies]

[build-dependencies]
chat_contract = { path = "./apps/chat/contract" }
chat_contract_tests = { path = "./apps/chat/contract/tests" }
dice = { path = "./apps/dice" }
dice_fsharp = { path = "./apps/dice/fsharp" }
dice_ui = { path = "./apps/dice/ui" }
dice_contract = { path = "./apps/dice/contract" }
dice_contract_tests = { path = "./apps/dice/contract/tests" }
exercism = { path = "./examples/rust/exercism" }
extension = { path = "./apps/spiral/temp/extension" }
plot = { path = "./apps/plot" }
test = { path = "./apps/spiral/temp/test" }

[lib]
path = "./apps/dice/dice.rs"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
rustflags = ["-C", "link-arg=-s"]
