cargo-features = ["profile-rustflags"]

[package]
name = "polyglot"
version = "0.0.1"
edition = "2021"

[workspace]

[workspace.package]
repository = "https://github.com/i574n/polyglot"
license-file = "../LICENSE"

[dependencies]
curve25519-dalek = "=4.1.2"

[dev-dependencies]

[build-dependencies]
chat_contract = { path = "./apps/chat/contract" }
chat_contract_tests = { path = "./apps/chat/contract/tests" }
plot = { path = "./apps/plot" }
spiral_temp_extension = { path = "./apps/spiral/temp/extension" }
spiral_temp_test = { path = "./apps/spiral/temp/test" }
exercism = { path = "./examples/rust/exercism" }
math = { path = "./lib/math" }

[lib]
path = "./lib/rust/fable/fable-library-rust.rs"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
rustflags = ["-C", "link-arg=-s"]
