cargo-features = ["profile-rustflags"]

[package]
name = "polyglot"
version = "0.0.1"
edition = "2021"

[workspace]

[workspace.package]
repository = "https://github.com/i574n/polyglot"
license-file = "../LICENSE"

[dependencies]
fable_library_rust = { path = "lib/rust/fable/fable_modules/fable-library-rust", default-features = false, features = ["static_do_bindings", "datetime", "guid", "threaded"] }

[dev-dependencies]

[build-dependencies]
chat_contract = { path = "./apps/chat/contract" }
chat_contract_tests = { path = "./apps/chat/contract/tests" }
plot = { path = "./apps/plot" }
rust_builder = { path = "./apps/spiral/rust_builder" }
spiral_temp_extension = { path = "./apps/spiral/temp/extension" }
spiral_temp_test = { path = "./apps/spiral/temp/test" }
exercism = { path = "./examples/rust/exercism" }
math = { path = "./lib/math" }

[lib]
path = "./lib/spiral/lib_spiral.rs"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
rustflags = ["-C", "link-arg=-s"]
