[package]
name = "dice"
version = "0.0.1"
edition = "2021"

[workspace]

[dependencies]
fable_library_rust = { path = "../../apps/spiral/temp/test/fable_modules/fable-library-rust", optional = true, default-features = false }
rand = { version = "~0.8", optional = true }

[features]
chain = ["fable_library_rust"]
default = ["fable_library_rust/default", "dep:rand"]

[[bin]]
name = "dice"
path = "Dice.rs"

[lib]
path = "DiceChain.rs"
