[package]
name = "plot"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
fable_library_rust = { workspace = true }
inline_colorization = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
plotters = { version = "~0.3", default-features = false, features = ["svg_backend", "line_series", "point_series"] }

[[bin]]
name = "plot"
path = "plot.rs"

[lib]
path = "lib.rs"
