[package]
name = "math"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
fable_library_rust = { workspace = true }
inline_colorization = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
num-complex = "~0.4"
statrs = "~0.16"
float-cmp = "~0.9"
pyo3 = "~0.21.1"

[[bin]]
name = "math"
path = "math.rs"
