[package]
name = "math"
workspace = "../../workspace"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
fable_library_rust = { workspace = true, features = ["static_do_bindings", "datetime", "guid", "threaded"] }
inline_colorization = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
num-complex = "~0.4"
statrs = "~0.16"
float-cmp = "~0.9"
pyo3 = "~0.21.1"
sha2 = "~0.11.0-pre.3"

[[bin]]
name = "math"
path = "math.rs"
