[package]
name = "extension"
version = "0.0.1"
edition = "2021"
workspace = "../../"

[lib]
crate-type = ["cdylib", "rlib"]
path = "./lib.rs"

[dependencies]
wasm-bindgen = "~0.2"

[dependencies.web-sys]
version = "~0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlCollection',
  'Node',
  'Window',
  'console',
  'DomTokenList',
]
