[package]
name = "test"
version = "0.0.1"
edition = "2021"
workspace = "../../"

[dependencies]
fable_library_rust = { path = "./fable_modules/fable-library-rust" }
tracing = "~0.1"
tracing-subscriber = "~0.3"
thiserror = "~1.0"
proptest = "~1.2"
nom = "~7.1"

[[bin]]
name = "test"
path = "./main.rs"
