[package]
name = "chat_contract"
workspace = "../../../workspace"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]
path = "chat_contract.rs"

[dependencies]
inline_colorization = { workspace = true }
fable_library_rust = { workspace = true, features = ["atomic"] }
sha2 = { workspace = true }
borsh = "1.5"
multibase = ">=0.9,<1"
near-sdk = "5.4"
unsigned-varint = ">=0.8,<1"
