[package]
name = "chat"
version = "0.0.1"
edition = "2021"

[workspace]

[dependencies]
anyhow = "~1.0"
serde_json = { version = "~1.0", features = ["arbitrary_precision"] }
tokio = { version = ">=1.28", features = ["full"] }
workspaces = { git = "https://github.com/near/workspaces-rs", features = ["unstable"] }

[dev-dependencies]

[[bin]]
name = "chat"
path = "./example_tests.rs"
