[package]
name = "chat"
version = "0.0.1"
edition = "2021"

[workspace]

[dependencies]
anyhow = "~1.0"
serde_json = { version = "~1.0", features = ["arbitrary_precision"] }
tokio = { version = ">=1.28", features = ["full"] }
near-workspaces = { version = "~0.8", features = ["experimental", "unstable"] }

[dev-dependencies]

[[bin]]
name = "chat"
path = "./example_tests.rs"
