[package]
name = "chat"
version = "0.0.1"
edition = "2021"

[workspace]

[dependencies]
console_error_panic_hook = { version = "0.1"}
console_log = { version = "1"}
gloo-net = { version = "0.4", features = ["http"] }
leptos = { version = "~0.5.0-beta", features = ["csr", "nightly"] }
leptos_meta = { version = "~0.5.0-beta", features = ["csr", "nightly"] }
leptos_router = { version = "~0.5.0-beta", features = ["csr", "nightly"] }
log = "0.4"
wasm-bindgen = { version = "0.2" }
