[package]
name = "chat"
version = "0.0.1"
edition = "2021"

[workspace]

[dependencies]
borsh = { version = "~1.0.0-alpha.4" }
console_error_panic_hook = { version = "0.1"}
console_log = { version = "1"}
futures = "~0.3"
gloo-net = { version = "0.4", features = ["http"] }
js-sys = "~0.3"
leptos = { version = "~0.5.0-beta", features = ["csr", "nightly"] }
leptos_meta = { version = "~0.5.0-beta", features = ["csr", "nightly"] }
leptos_router = { version = "~0.5.0-beta", features = ["csr", "nightly"] }
log = "~0.4"
reqwest-wasm = { version = "~0.11", features = ["json"] }
rexie = "~0.5"
serde = "~1.0"
serde_json = { version = "~1.0", features = ["arbitrary_precision"] }
serde-wasm-bindgen = "~0.5"
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "~0.4"
web-sys = { version = "~0.3", features = ["Storage"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
