[package]
name = "dice_contract"
version = "0.0.1"
edition = "2021"
workspace = "../../../"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "~5.0.0-alpha.2"
dice = { path = "..", default-features = false, features = ["wasm"] }
fable_library_rust = { path = "../../../apps/spiral/temp/test/fable_modules/fable-library-rust", default-features = false }

[features]
wasm = []
