[package]
name = "dice"
version = "0.0.1"
edition = "2021"

[workspace]

[dependencies]
anyhow = "~1.0"
borsh = { version = "~1.0.0-alpha.6" }
serde_json = { version = "~1.0", features = ["arbitrary_precision"] }
tokio = { version = ">=1.28", features = ["full"] }
near-workspaces = { git = "https://github.com/near/workspaces-rs", features = ["experimental", "unstable"] }

[dev-dependencies]

[[bin]]
name = "dice"
path = "./example_tests.rs"
