[package]
name = "dice_ui"
version = "0.0.1"
edition = "2021"
workspace = "../../../"
description = ""
repository.workspace = true
license-file.workspace = true

[[bin]]
name = "dice_ui_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fable_library_rust = { path = "../../../apps/spiral/temp/test/fable_modules/fable-library-rust", default-features = false, features = [] }
base64 = "~0.21"
borsh = { version = "~1.2", features = ["derive", "rc"] }
chrono = "~0.4"
console_error_panic_hook = { version = "0.1"}
console_log = { version = "1"}
futures = "~0.3"
gloo-net = { version = "0.4", features = ["http"] }
js-sys = "~0.3"
leptos = { version = "~0.5", features = ["csr", "nightly"] }
leptos_meta = { version = "~0.5", features = ["csr", "nightly"] }
leptos_router = { version = "~0.5", features = ["csr", "nightly"] }
log = "~0.4"
reqwest-wasm = { version = "~0.11", features = ["json"] }
rexie = "~0.5"
serde = { version = "~1.0", features = ["rc"] }
serde_json = { version = "~1.0", features = ["arbitrary_precision"] }
serde-wasm-bindgen = "~0.6"
wasm-bindgen = { version = "~0.2" }
wasm-bindgen-futures = "~0.4"
web-sys = { version = "~0.3", features = ["Storage"] }
