[package]
name = "rust_builder"
version = "0.0.1"
edition = "2021"
workspace = "../../../"

[dependencies]
fable_library_rust = { path = "../../../lib/rust/fable/fable_modules/fable-library-rust", default-features = false, features = ["static_do_bindings", "datetime", "guid", "threaded"] }
clap = "~4.5"
inline_colorization = "~0.1"
regex = "~1.10"
chrono = "~0.4"

[dev-dependencies]

[[bin]]
name = "rust_builder"
path = "rust_builder.rs"
