[package]
name = "spiral_wasm"
workspace = "../../../workspace"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[[bin]]
name = "spiral_wasm"
path = "spiral_wasm.rs"

[dependencies]
fable_library_rust = { workspace = true, features = ["static_do_bindings", "datetime", "guid", "threaded"] }
inline_colorization = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = "1.0"
sha2 = "~0.11.0-pre.4"
near-workspaces = { version = "=0.11.1", features = ["experimental", "unstable"] }
near-sandbox-utils = { version = ">=0.11,<1", features = ["global_install"] }
near-token = ">=0.3,<1"
near-sdk = "5.4"
