[package]
name = "chat_contract_tests"
workspace = "../../../../workspace"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = "~1.0"
near-workspaces = { version = "~0.11", features = ["experimental", "unstable"] }
near-sandbox-utils = { version = "~0.9", features = ["global_install"] }
