[package]
name = "spiral_temp_extension"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = { workspace = true }
wasm-bindgen = "~0.2"
borsh = { version = "~1.5" }
console_error_panic_hook = { version = "0.1" }
console_log = { version = "1" }
futures = "~0.3"
gloo-net = { version = "0.5", features = ["http"] }
js-sys = "~0.3"
leptos = { version = "~0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "~0.6", features = ["csr", "nightly"] }
leptos_router = { version = "~0.6", features = ["csr", "nightly"] }
log = "~0.4"
reqwest-wasm = { version = "~0.11", features = ["json"] }
rexie = "~0.5"
serde = "~1.0"
serde-wasm-bindgen = "~0.6"
wasm-bindgen-futures = "~0.4"

[dependencies.web-sys]
version = "~0.3"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlInputElement',
    'HtmlCollection',
    'Node',
    'Window',
    'console',
    'DomTokenList',
    'Storage',
]
