[package]
name = "proxy"
version = "0.0.1"
edition = "2021"
workspace = "../../"

[dependencies]
chrono = "~0.4"
clap = { version = "~4.1", features = ["derive"] }
colored = "~2.0"
fable_library_rust = { path = "../cli/fable_modules/fable-library-rust" }
rand = "~0.8"
serde_json = "~1.0"
zmq = "~0.10"
linereader = "~0.4"
regex = "~1.8"

reqwest = "~0.11"
rocket = "0.5.0-rc.2"

[[bin]]
name = "proxy"
path = "./proxy.rs"
